--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,82 @@
-window#appTemplate { /* Rename appTemplate to the ID of the app */
-  color: #f0f;
+#KeyboardShortcuts > div.body {
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+#KeyboardShortcuts > div.body div.header {
+  padding: 15px;
+  height: 90px;
+}
+
+#KeyboardShortcuts > div.body div.header p {
+  opacity: 0.5;
+  margin-top: 5px;
+}
+
+#KeyboardShortcuts > div.body div.header * {
+  margin: 0;
+}
+
+#KeyboardShortcuts > div.body div.shortcuts {
+  padding: 20px;
+  display: flex;
+  gap: 20px 60px;
+  flex-wrap: wrap;
+  padding-top: 10px;
+}
+
+#KeyboardShortcuts > div.body div.shortcuts div.app {
+  width: calc(270px);
+  min-width: calc(270px);
+}
+
+#KeyboardShortcuts > div.body div.shortcuts div.app h1.name {
+  margin: 0;
+  margin-bottom: 20px;
+  font-size: 22px;
+}
+
+#KeyboardShortcuts > div.body div.shortcuts div.app div.shortcut {
+  display: flex;
+  align-items: start;
+  margin-bottom: 25px;
+  gap: 10px;
+  flex-direction: column;
+}
+
+#KeyboardShortcuts > div.body div.shortcuts div.app div.shortcut div.keys {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  width: 150px;
+  min-width: 270px;
+}
+#KeyboardShortcuts > div.body div.shortcuts div.app div.shortcut div.key {
+  padding: 0 7px;
+  line-height: 25px;
+  text-align: center;
+  text-transform: uppercase;
+
+  border-radius: 5px;
+  background-color: var(--button-hover-bg);
+  border-bottom: var(--button-bg) 5px solid;
+  min-width: 25px;
+  height: 30px;
+  width: fit-content;
+  font-weight: bold;
+  border-radius: 5px 5px 10px 10px;
+  font-size: 11px;
+  font-family: "Source Code Pro", monospace;
+}
+
+#KeyboardShortcuts > div.body div.shortcuts div.app div.shortcut span.plus {
+  opacity: 0.3;
+  font-weight: bold;
+}
+
+#KeyboardShortcuts > div.body div.shortcuts div.app div.description {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
