--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@
 
 #KeyboardShortcuts > div.body div.shortcuts {
   padding: 20px;
-  display: flex;
+  column-count: 3;
   gap: 20px 60px;
   flex-wrap: wrap;
   padding-top: 10px;
